made change to css to fix overflow bug.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@ body {
     background-color: #fff;
     letter-spacing: 1px;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .titleMessage {
